--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page8.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page8.xhtml
@@ -8,7 +8,7 @@
     <div class="Container100 Responsive100">
         <div class="ContainerIndent">
             <div class="TexAlCenter">
-                <h2 class="black Fs24 fnt1">Terms of agreement</h2>
+                <h2 class="Fs24 fnt1">Terms of agreement</h2>
             </div>
         </div>
         <div class="EmptyBox5"></div>
