--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
@@ -9,7 +9,7 @@
         <p:panel id="editPage1" style="border: 0px; background: transparent;">
             <div class="Container100 TextAlCenter">
                 <div class="TexAlCenter">
-                    <h1 class="black Fs20 fnt1">#{tcmpb.firstname}, your currently selected strategy for this portfolio is:</h1>
+                    <h1 class="Fs20 fnt1">#{tcmpb.firstname}, your currently selected strategy for this portfolio is:</h1>
                 </div>
 
                 <table class="Container100  TextAlCenter">
@@ -17,7 +17,7 @@
                         <td colspan="2" class="TexAlCenter">
                             <div class="DispInlBlock TexAlLeft tp1">
                                 <div class="Fright">
-                                    <h1 class="black Fs24 fnt1">#{tcmpb.origCustomerData.portfolioName}</h1>
+                                    <h1 class="Fs24 fnt1">#{tcmpb.origCustomerData.portfolioName}</h1>
                                 </div>
                             </div>
                         </td>
@@ -26,7 +26,7 @@
                         <td colspan="2" class="TexAlCenter">
                             <div class="DispInlBlock TexAlLeft tp1">
                                 <div class="Fright">
-                                    <h2 class="black f1 textAlign">The primary objective of this strategy is #{tcmpb.longDes} </h2>
+                                    <h2 class="f1 textAlign">The primary objective of this strategy is #{tcmpb.longDes} </h2>
                                 </div>
                             </div>
                         </td>
