--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -84,7 +84,7 @@
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                    </div><div class="Container60 s_dashboardLabel"><h3>Change Strategy/Goal</h3></div>
+                                                    </div><div class="Container60 s_dashboardLabel"><h3>Change Strategy</h3></div>
 </div>
                                             <div class="s_dashboard">
                                                     <div class="Container40 s_dashboardIcon">
