--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
@@ -26,7 +26,7 @@
                                              itemLabel="Changing your strategy will require portfolio rebalancing which may incur: the realization of capital gains or losses, additional transaction costs, and/or short-term trading penalties/fees. Strategy changes have the potential to be detrimental to performance.">
                         <p:ajax update=":ceForm:inputArea" listener="#{tcmpb.confirmationCheckClick}"/>
                     </p:selectBooleanCheckbox>
-
+<div class="EmptyBox10"></div>
                     <p:selectBooleanCheckbox value="#{tcmpb.finalCheck2}" styleClass="RegulatoryCheckBox textAlignLeft"
                                              itemLabel="Due to limited liquidity in some investments, a strategy change and accompanying rebalance may take several months to be fully completed. It may also result in temporarily increased levels of cash in the portfolio and/or variances from the model strategy allocations.  Depending on the specifics of each situation, we may also utilize placeholder investments temporarily in lieu of model strategy investments that are not currently available for purchase.">
                         <p:ajax update=":ceForm:inputArea" listener="#{tcmpb.confirmationCheckClick}" />
