--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
@@ -37,7 +37,7 @@
                             <div class="Container100">
                                 <div class="ContainerIndent Responsive100 tab_main">
 
-                                    <p:steps id="progressbar" styleClass="portfolioCreationSteps8Panel"
+                                    <p:steps id="progressbar" styleClass="portfolioCreationSteps8Panel portfolioCreationStepsPanel"
                                              activeIndex="#{tcmpb.pagemanager.page}">
                                         <p:menuitem value="Selection" />
                                         <p:menuitem value="Start" />
