--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/overview.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/overview.xhtml
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <p:accordionPanel multiple="true" styleClass="marginZero">
-                            <p:tab title="Summary">
+                            <p:tab title="Summary – Current Holding">
                                 <div class="Container100">
                                     <div class="Container50 Responsive50 tp20">
                                         <!-- ROHIT's CHANGE -->
@@ -91,7 +91,7 @@
                                 </div>
                             </p:tab>
 
-                            <p:tab title="Detail">
+                            <p:tab title="Detail Holding">
                                 <div class="Container100 Responsive100">
                                     <div class="ContainerIndent">
                                         <p:dataTable id="dataTable" var="position" value="#{tcmpos.displayPositionList}"
