--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7.xhtml
@@ -8,10 +8,7 @@
     <div class="Container100  Responsive100">
         <div class="ContainerIndent">
 
-            <div class="TexAlCenter">
-                <h1 class="Fs24 fnt1">Review</h1>
-            </div>
-            <div class="EmptyBox10"></div>
+
 
             <div class="Container100 Responsive100">
                 <div class="Container10" style="height:1px;"></div>
@@ -20,19 +17,16 @@
                         <div class="ContainerIndent">
                             <p:panel style="height: 60%; width: 100%; background: #ffffff;">
                                 <div class="EmptyBox5"></div>
-                                <h2 class="Fs20 fnt1 textAlign">Current Portfolio:
-                                    <span style="text-decoration: underline;">#{tcmpb.origCustomerData.portfolioName}</span>
-                                </h2>
+                                <h1 class="Fs20 fnt1 textAlign">Your currently selected strategy for this portfolio is : #{tcmpb.origCustomerData.portfolioName}
+                                </h1>
 
-
-                                <h3 class="black f1 textAlign"></h3>
 
                                 <div class="EmptyBox5"></div>
                             </p:panel>
                         </div>
                     </div>
                     <div class="ContainerIndent">
-                        <p:panel id="reviewPanel" style="height: 60%; width: 100%; background: #f5f5f5;">
+                        <p:panel id="reviewPanel" style="height: 60%; width: 100%; background: #ffffff;">
                             <div class="EmptyBox10"></div>
                             <h3 class="black f1 textAlign">
                                 <ui:fragment rendered="#{tcmpb.formula == 'Q'}">
