--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
@@ -9,36 +9,18 @@
         <p:panel id="editPage1" style="border: 0px; background: transparent;">
             <div class="Container100 TextAlCenter">
                 <div class="TexAlCenter">
-                    <h1 class="Fs20 fnt1">#{tcmpb.firstname}, your currently selected strategy for this portfolio is:</h1>
+                    <h1 class="Fs20 fnt1">#{tcmpb.firstname}, your currently selected strategy for this portfolio is : #{tcmpb.origCustomerData.portfolioName}</h1>
+                    <div class="EmptyBox10"></div>
+                    <h1 class="f1 textAlign">The primary objective of this strategy is #{tcmpb.longDes}</h1>
                 </div>
 
-                <table class="Container100  TextAlCenter">
-                    <tr>
-                        <td colspan="2" class="TexAlCenter">
-                            <div class="DispInlBlock TexAlLeft tp1">
-                                <div class="Fright">
-                                    <h1 class="Fs24 fnt1">#{tcmpb.origCustomerData.portfolioName}</h1>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2" class="TexAlCenter">
-                            <div class="DispInlBlock TexAlLeft tp1">
-                                <div class="Fright">
-                                    <h2 class="f1 textAlign">The primary objective of this strategy is #{tcmpb.longDes} </h2>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
 
-                </table>
 
-                <div class="EmptyBox10"></div>
+                <div class="EmptyBox5"></div>
 
                 <div class="Fs14 textAlign">
                     <ul>
-                        <li class="customLi">If your situation has changed, or you no longer feel this is the best match for your goals and risk tolerance then you may revise your selected portfolio using the options below.  However, strategy changes should not be made lightly - there are a number of factors you should consider before editing your chosen strategy:</li>
+                       <div style="text-align: left;">If your situation has changed, or you no longer feel this is the best match for your goals and risk tolerance then you may revise your selected portfolio using the options below.  However, strategy changes should not be made lightly - there are a number of factors you should consider before editing your chosen strategy:</div>
                         <li class="customLi">Changing your strategy will require portfolio rebalancing which may incur: the realization of capital gains or losses, additional transaction costs, and/or short-term trading penalties/fees. Strategy changes have the potential to be detrimental to performance.</li>
                         <li class="customLi">Due to limited liquidity in some investments, a strategy change and accompanying rebalance may take several months to be fully completed. It may also result in temporarily increased levels of cash in the portfolio and/or variances from the model strategy allocations.  Depending on the specifics of each situation, we may also utilize placeholder investments temporarily in lieu of model strategy investments that are not currently available for purchase.</li>
                     </ul>
