--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -90,7 +90,7 @@
                                                 <div class="invNBgrid DashboardIconBlock" style="width: 100%;">
 <div class="s_dashboard">
                                                     <div class="Container40 s_dashboardIcon">
-                                                        <p:commandButton id="activeButton" disabled="#{!investment.hasPosition}"
+                                                        <p:commandButton id="activeButton" disabled="#{!investment.hasPosition }"
                                                                          styleClass="Fs14 GreenButton"
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-search-plus Fs14 white"
@@ -101,9 +101,11 @@
                                                         </p:commandButton>
                                                     </div><div class="Container60 s_dashboardLabel"><h3>Positions</h3></div>
 </div>
+                                                    <ui:fragment rendered="#{investment.hasPosition  }">
                                                     <div class="s_dashboard">
-                                                    <div class="Container40 s_dashboardIcon">
-                                                        <p:commandButton id="editPortfolioButton" rendered="#{investment.hasPosition}"
+
+                                                        <div class="Container40 s_dashboardIcon">
+                                                        <p:commandButton id="editPortfolioButton" rendered="#{investment.hasPosition }"
                                                                          styleClass="Fs14 OrangeButton"
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-pie-chart Fs14 white"
@@ -112,7 +114,13 @@
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
-                                                        <p:commandButton id="pendingButton" rendered="#{!investment.managed}"
+
+                                                    </div><div class="Container60 s_dashboardLabel relativeCenter"><h3>Change Strategy</h3></div></div>
+                        </ui:fragment><ui:fragment rendered="#{!investment.hasPosition }">
+
+                                                    <div class="s_dashboard">
+                                                    <div class="Container40 s_dashboardIcon">
+                                                        <p:commandButton id="pendingButton" disabled="#{investment.displayActiveAcctNum=='Pending'}"
                                                                          styleClass="Fs14 BlueButton"
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-pencil-square-o Fs14 white"
@@ -121,7 +129,9 @@
                                                             <f:setPropertyActionListener value="#{investment}"
                                                                                          target="#{tcmdash.selectedAccount}"/>
                                                         </p:commandButton>
+
                                                     </div><div class="Container60 s_dashboardLabel relativeCenter"><h3>Change Strategy</h3></div></div>
+                                    </ui:fragment>
 
                                             <div class="s_dashboard" style="display: none">
                                                     <div class="Container40 s_dashboardIcon">
