Checked in 12/7/2016 - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
@@ -7,7 +7,11 @@
 
     <div class="Container100 ">
         <div class="ContainerIndent">
-	    <div class="Fs16 textAlign">
+	    <div class="Fs17 textAlign">
+
+            You are about to change your portfolio’s strategy from <strong>#{tcmpb.portfolioName}</strong> to <strong>#{tcmpb.selectedThemeName}</strong>.
+            Please read and accept the following statements to indicate that you know and understand the potential implications.
+            <!--
             You are about to make an exchange from
             <span style="text-decoration: underline;">#{tcmpb.portfolioName}</span>
             in the amount of
@@ -16,7 +20,7 @@
             </h:outputText>
             to the
             <span style="text-decoration: underline;">#{tcmpb.selectedThemeName}</span>
-            indicated below for the corresponding account
+            indicated below for the corresponding account -->
 	    </div>
 
             <div class="EmptyBox20"></div>
