--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
@@ -9,14 +9,14 @@
         <p:panel id="editPage1" style="border: 0px; background: transparent;">
             <div class="Container100 TextAlCenter">
                 <div class="TexAlCenter">
-                    <h1 class="Fs20 fnt1">#{tcmpb.firstname}, your currently selected strategy for this portfolio is : #{tcmpb.origCustomerData.portfolioName}</h1>
-                    <div class="EmptyBox10"></div>
-                    <h1 class="f1 textAlign">The primary objective of this strategy is #{tcmpb.longDes}</h1>
+                    <div class="textAlign Fs17">#{tcmpb.firstname}, your currently selected strategy for this portfolio is <strong>#{tcmpb.origCustomerData.portfolioName}</strong></div>
+                    <div class="EmptyBox20"></div>
+                    <div class="textAlign Fs17">The primary objective of this strategy is #{tcmpb.longDes}</div>
                 </div>
 
 
 
-                <div class="EmptyBox5"></div>
+                <div class="EmptyBox10"></div>
 
                 <div class="Fs14 textAlign">
                     <ul>
