--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -15,10 +15,10 @@
             <!-- BOX START -->
             <div class="layout-portlets-box">
                 <div class="Container100 Responsive100">
-                    <div class="ContainerIndent">
+                    <div class="ContainerIndent" style="padding-top: 0px;">
                         <div class="Container100">
 
-                            <div class="DispInlBlock MarTop20">
+                            <div class="DispInlBlock">
                                 <div class="Container20"><i class="fa fa-user Fs50 red Fleft MarRight10"></i></div>
                                 <div class="Container80 UsernameDashboard">
                                     <div class="Fright">
@@ -52,7 +52,7 @@
                             <p:panel styleClass="s_dashbaordPanel" style="width: 100%; background: #f5f5f5; padding: 0px!important;">
 
 
-                                <table class="invNBgrid AccountDashboardAlignRes" style="width: 100%;">
+                                <table class="invNBgrid AccountDashboardAlignRes effectShiftMargin" style="width: 100%;">
                                     <tr style="font-size: 15px;" class="dashboard_customStyle">
                                         <td style="width: 20%;" class="FS13Custom"><p:commandButton id="uidHelp"
                                                                                                     styleClass="info_dashboard"
@@ -73,7 +73,7 @@
 
 
 
-                                        <td style="width: 20%; text-align: right;" class="FS13Custom">
+                                        <td style="width: 20%; text-align: right; padding-right: 30px!important;" class="FS13Custom">
 
                                                 <h:outputText value="#{investment.actualInvested}"  rendered="#{investment.managed}">
                                                     <f:convertNumber currencySymbol="$" type="currency"/>
@@ -83,7 +83,8 @@
                                                 </h:outputText>
                                             </td>
                                     </tr>
-
+</table>
+                                <table class="invNBgrid AccountDashboardAlignRes" style="width: 100%;">
                                     <tr style="font-size: 13px;">
                                         <td colspan="5" style="width: 100%; margin-left: 5px">
                                             <div class="EmptyBox20"></div>
