Checked in 12/7/2016 - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -124,7 +124,7 @@
                                                         <p:commandButton id="pendingButton" disabled="#{investment.displayActiveAcctNum=='Pending'}"
                                                                          styleClass="Fs14 BlueButton"
                                                                          process="@this" immediate="true"
-                                                                         icon="fa fa-pencil-square-o Fs14 white"
+                                                                         icon="fa fa-pie-chart Fs14 white"
                                                                          action="#{tcmdash.doSelectedAction}">
                                                             <p:tooltip id="pendingToolTipFade" for="pendingButton" value="Change Strategy"/>
                                                             <f:setPropertyActionListener value="#{investment}"
